// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxList renders correctly with items 1`] = `
<div>
  <div
    class="MuiFormControl-root-69 MuiFormControl-marginNormal-70 MuiFormControl-fullWidth-72"
  >
    <label
      class="MuiFormLabel-root-84 MuiInputLabel-root-73 MuiInputLabel-formControl-78 MuiInputLabel-animated-81"
      data-shrink="false"
      for="SomeField"
    >
      Some Field
    </label>
    <div
      class="MuiInputBase-root-111 MuiInput-root-98 MuiInput-underline-102 MuiInputBase-fullWidth-120 MuiInput-fullWidth-105 MuiInputBase-formControl-112 MuiInput-formControl-99"
    >
      <div
        class="MuiSelect-root-91"
      >
        <select
          aria-invalid="false"
          class="MuiSelect-select-92 MuiInputBase-input-121 MuiInput-input-106"
          id="SomeField"
          name="SomeField"
        >
          <option
            value=""
          />
          <option
            value="123"
          >
            123: Hello
          </option>
        </select>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-128 MuiSelect-icon-97"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`BoxList renders correctly with no items 1`] = `
<div>
  <div
    class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
  >
    <label
      class="MuiFormLabel-root-16 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
      data-shrink="false"
      for="SomeField"
    >
      Some Field
    </label>
    <div
      class="MuiInputBase-root-43 MuiInput-root-30 MuiInput-underline-34 MuiInputBase-fullWidth-52 MuiInput-fullWidth-37 MuiInputBase-formControl-44 MuiInput-formControl-31"
    >
      <div
        class="MuiSelect-root-23"
      >
        <select
          aria-invalid="false"
          class="MuiSelect-select-24 MuiInputBase-input-53 MuiInput-input-38"
          id="SomeField"
          name="SomeField"
        >
          <option
            value=""
          />
        </select>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-60 MuiSelect-icon-29"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`BoxList triggers onChange 1`] = `
<div>
  <div
    class="MuiFormControl-root-137 MuiFormControl-marginNormal-138 MuiFormControl-fullWidth-140"
  >
    <label
      class="MuiFormLabel-root-152 MuiInputLabel-root-141 MuiInputLabel-formControl-146 MuiInputLabel-animated-149"
      data-shrink="false"
      for="SomeField"
    >
      Some Field
    </label>
    <div
      class="MuiInputBase-root-179 MuiInput-root-166 MuiInput-underline-170 MuiInputBase-fullWidth-188 MuiInput-fullWidth-173 MuiInputBase-formControl-180 MuiInput-formControl-167"
    >
      <div
        class="MuiSelect-root-159"
      >
        <select
          aria-invalid="false"
          class="MuiSelect-select-160 MuiInputBase-input-189 MuiInput-input-174"
          data-testid="filter"
          id="SomeField"
          name="SomeField"
        >
          <option
            value=""
          />
          <option
            value="123"
          >
            123: Hello
          </option>
        </select>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-196 MuiSelect-icon-165"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
